--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
     "titleBar.inactiveBackground": "#ffffff99",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#ffffff"
+  "peacock.color": "#ffffff",
+  "liveServer.settings.port": 5501
 }
